<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FileManager</string>
    <string name="search_label">FileSearch</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="delete">delete</string>
    <string name="copy">copy</string>
    <string name="paste">paste</string>
    <string name="merge">merge</string>
    <string name="search">search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">search for html files</string>

</resources>
