<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:filemanager.android.ykolesnik.com.filemanager="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/search"
          filemanager.android.ykolesnik.com.filemanager:showAsAction="collapseActionView|always"
          filemanager.android.ykolesnik.com.filemanager:actionViewClass="android.support.v7.widget.SearchView"/>
    <item android:id="@+id/action_delete"
          android:icon="@drawable/ic_action_delete"
          android:title="@string/delete"
          filemanager.android.ykolesnik.com.filemanager:showAsAction="ifRoom"/>
    <item android:id="@+id/action_copy"
           android:icon="@drawable/ic_action_copy"
           android:title="@string/copy"
           filemanager.android.ykolesnik.com.filemanager:showAsAction="ifRoom"/>
    <item android:id="@+id/action_paste"
          android:icon="@drawable/ic_action_paste"
          android:title="@string/paste"
          filemanager.android.ykolesnik.com.filemanager:showAsAction="ifRoom"/>
    <item android:id="@+id/action_merge"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/merge"
          filemanager.android.ykolesnik.com.filemanager:showAsAction="ifRoom"/>
</menu>
